# CC-Caller

./: .claudeignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  cc-caller  cc_caller.py  gemini_bridge.py  index.html  livekit_agent.py  livekit_audio_bridge.py  livekit_patch.py  livekit_server.py  pyproject.toml  requirements.txt  summarizer.py  vapi_client.py  webhook.py
cc_caller/: callermem.py  claude_worker.py  cli.py  config.py  gemini_live.py  legacy_cli.py  notify.py  push.py  server.py  sessions.py  summarizer.py  tasks.py  tunnel.py
cc_caller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cc_caller/static/: app.js  audio-worklet.js  index.html  manifest.json  styles.css  sw.js
cc_caller/vapi/: webhook.py
docs/superpowers/plans/: 2026-03-28-cc-caller.md  2026-06-10-gemini-pwa.md  2026-06-12-agent-sdk-migration.md  2026-06-12-caller-memory.md
docs/superpowers/specs/: 2026-03-28-cc-caller-design.md  2026-03-29-live-mode-design.md  2026-03-29-livekit-mode-design.md  2026-06-10-gemini-pwa-design.md
experiments/: README.md  livekit_audio_bridge.py
recipe-landing/: congee-risotto.html  cumin-lamb-chops.html  index.html  mojito.html  mojito_recipe.md
static/: sw.js
tests/: fake_gemini.py  test_callermem.py  test_cancel_queue.py  test_cc_caller.py  test_cli.py  test_cli_wiring.py  test_config.py  test_gemini_live.py  test_push.py  test_server.py  test_sessions.py  test_summarizer.py  test_tasks.py  test_tunnel.py  test_vapi_client.py  test_webhook.py
